更新 防百度登录 main.css

--- a/login/static/css/main.css
+++ b/login/static/css/main.css
@@ -14,10 +14,10 @@ a{
     background: #000;
 }
 
+/*border: solid 1px red;*/
 .header-con{
     width: 900px;
     height: 40px;
-    border: solid 1px red;
     margin: 0px auto;
 }
 
